--- a/readme.org
+++ b/readme.org
@@ -1,19 +1,18 @@
 * Measured Variables
-| Code           | Variables                                                         | link                                                                                       | Study, Journal,  Code Book |
-|                |                                                                   |                                                                                            |                            |
-| Abortion       | legization and restrictions Abortion                              | https://monqcle.com/upload/63cadb019cd360213f8b4572/download                               |                            |
-| IVF            | legalization and access to IVF                                    | https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9351254/table/Tab1/?report=objectonly         |                            |
-| Breast         | Breast Feeding & Pumping                                          |                                                                                            |                            |
-| Mortality      | Birth Mortality                                                   |                                                                                            |                            |
-| Poverty        | Poverty rate                                                      |                                                                                            |                            |
-| Homeless       | Homelessness                                                      |                                                                                            |                            |
-| Rape           | Rape Stats                                                        |                                                                                            |                            |
-| Degrees        | Ratio Of women earning Batcholers Degrees                         |                                                                                            |                            |
-| Pregnacy       | Average age of pregnacy                                           |                                                                                            |                            |
-| LifeExpectancy | Average Life Expectancy                                           | https://data.cdc.gov/api/views/a5a8-jsrq/rows.csv?accessType=DOWNLOAD&bom=true&format=true |                            |
-| Happiness      | Average happiness index                                           |                                                                                            |                            |
-| Virginity      | Average age of loss of virginity                                  |                                                                                            |                            |
-| Period         | Access to menstrual products within shelters, schools and prisons |                                                                                            |                            |
-| Income         | income pay disparity                                              |                                                                                            |                            |
-| DVStat         | Domestic violence rates                                           |                                                                                            |                            |
-| DV             | access to domestic violence resources                             |                                                                                            |                            |
+| Code           | Variables                                                         | link                                                                                                                                                                                     | Study, Journal,  Code Book                                                                                                                                                                                                                                                                                  |
+|                |                                                                   |                                                                                                                                                                                          |                                                                                                                                                                                                                                                                                                             |
+| Abortion       | legization and restrictions Abortion                              | https://monqcle.com/upload/63cadb019cd360213f8b4572/                                                                                                                                     |                                                                                                                                                                                                                                                                                                             |
+| IVF            | legalization and access to IVF                                    | https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9351254/table/Tab1/?report=objectonly                                                                                                       |                                                                                                                                                                                                                                                                                                             |
+| Breast         | Breast Feeding & Pumping                                          |                                                                                                                                                                                          |                                                                                                                                                                                                                                                                                                             |
+| Mortality      | Birth Mortality                                                   | https://www.kff.org/other/state-indicator/maternal-deaths-and-mortality-rates-per-100000-live-births/?currentTimeframe=0&sortModel=%7B%22colId%22:%22Location%22,%22sort%22:%22asc%22%7D | https://www.kff.org/other/state-indicator/maternal-deaths-and-mortality-rates-per-100000-live-births/?currentTimeframe=0&sortModel=%7B%22colId%22:%22Location%22,%22sort%22:%22asc%22%7D                                                                                                                    |
+| Poverty        | Poverty rate                                                      |                                                                                                                                                                                          |                                                                                                                                                                                                                                                                                                             |
+| Homeless       | Homelessness                                                      |                                                                                                                                                                                          |                                                                                                                                                                                                                                                                                                             |
+| Rape           | Rape Stats                                                        |                                                                                                                                                                                          |                                                                                                                                                                                                                                                                                                             |
+| Degrees        | Ratio Of women earning Batcholers Degrees                         |                                                                                                                                                                                          |                                                                                                                                                                                                                                                                                                             |
+| Pregnacy       | Average age of pregnacy                                           |                                                                                                                                                                                          |                                                                                                                                                                                                                                                                                                             |
+| LifeExpectancy | Average Life Expectancy                                           | https://data.cdc.gov/api/views/a5a8-jsrq/rows.csv?accessType=DOWNLOAD&bom=true&format=true                                                                                               |                                                                                                                                                                                                                                                                                                             |
+| Happiness      | Average happiness index                                           |                                                                                                                                                                                          |                                                                                                                                                                                                                                                                                                             |
+| Virginity      | Average age of loss of virginity                                  |                                                                                                                                                                                          |                                                                                                                                                                                                                                                                                                             |
+| Period         | Access to menstrual products within shelters, schools and prisons |                                                                                                                                                                                          |                                                                                                                                                                                                                                                                                                             |
+| Income         | income pay disparity                                              |                                                                                                                                                                                          |                                                                                                                                                                                                                                                                                                             |
+| DVStat         | Domestic violence rates                                           |                                                                                                                                                                                          | https://hdpulse.nimhd.nih.gov/data-portal/knowledge/table?race=00&race_options=raceall_1&sex=0&sex_options=sexboth_1&statefips_options=area_us&knowledgetopic=080&knowledgetopic_options=knowledge_9&screening=57&screening_options=violence_2&datatype=010&datatype_options=datatypedirect_1&statefips=00# |
